# omr

fvtest/lljbtest/: add.cpp
jitbuilder/: CMakeLists.txt
jitbuilder/apigen/: javagen.py
jitbuilder/release/: CMakeLists.txt
jitbuilder/release/cpp/samples/: add.cpp
jitbuilder/release/java/: SimpleMethod.java
jitbuilder/release/java/include/: BytecodeBuilder.java  IlBuilder.cpp  IlBuilder.h  IlBuilder.java  IlBuilder_JBCase.h  IlBuilder_JBCondition.h  IlType.java  IlValue.java  JitBuilder.cpp  JitBuilder.java  MethodBuilder.java  MethodHandler.cpp  MethodHandler.h  MethodHandler.java  ThunkBuilder.java  TypeDictionary.java  VirtualMachineOperandArray.java  VirtualMachineOperandStack.java  VirtualMachineRegister.java  VirtualMachineRegisterInStruct.java  VirtualMachineState.java  jitbuilder_release_java_include_IlBuilder.h  jitbuilder_release_java_include_IlBuilder_JBCase.h  jitbuilder_release_java_include_IlBuilder_JBCondition.h  jitbuilder_release_java_include_IlType.h  jitbuilder_release_java_include_MethodHandler.h  jitbuilder_release_java_include_ThunkBuilder.h  jitbuilder_release_java_include_TypeDictionary.h  jitbuilder_release_java_include_VirtualMachineOperandArray.h  jitbuilder_release_java_include_VirtualMachineOperandStack.h  jitbuilder_release_java_include_VirtualMachineRegister.h  jitbuilder_release_java_include_VirtualMachineRegisterInStruct.h  jitbuilder_release_java_include_VirtualMachineState.h
jitbuilder/release/java/samples/: BytecodeBuilder.java  IlBuilder.java  IlType.java  IlValue.java  JitBuilder.h  JitBuilder.java  MethodBuilder.java  MethodHandler.cpp  MethodHandler.java  Simple.cpp  Simple.h  Simple.java  SimpleMethod.java  ThunkBuilder.java  TypeDictionary.java  VirtualMachineOperandArray.java  VirtualMachineRegister.java  VirtualMachineRegisterInStruct.java  VirtualMachineState.java  jitbuilder_release_java_samples_Simple.cpp  jitbuilder_release_java_samples_Simple.h  omrjnicompile.sh
